# StageBadger

./: .editorconfig  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  fix_asr.py  index.html  package-lock.json  package.json  playwright.config.ts
src/: App.tsx  destinations.ts  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: asr.rs  chat.rs  destinations.rs  ffmpeg.rs  lib.rs  main.rs  transcript.rs  types.rs
src-tauri/tests/: e2e_audio_pipeline.rs
tests/: app.spec.ts  destinations.spec.ts
